vlib/v/checker/tests/missing_concrete_type_err.vv
struct Foo[T] {}

fn main() {
	bar[Foo]()
}

fn bar[T]() {
	
}